--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  flutter_svg:
 
 dev_dependencies:
   flutter_test:
@@ -30,14 +31,14 @@ flutter:
   fonts:
     - family: Satoshi
       fonts:
-        - asset: assets/fonts/Satoshi-Black.ttf
+        - asset: assets/fonts/Satoshi-Black.otf
           weight: 900
-        - asset: assets/fonts/Satoshi-Bold.ttf
+        - asset: assets/fonts/Satoshi-Bold.otf
           weight: 600
-        - asset: assets/fonts/Satoshi-Medium.ttf
+        - asset: assets/fonts/Satoshi-Medium.otf
           weight: 500
-        - asset: assets/fonts/Satoshi-Regular.ttf
+        - asset: assets/fonts/Satoshi-Regular.otf
           weight: 400
-        - asset: assets/fonts/Satoshi-Light.ttf
+        - asset: assets/fonts/Satoshi-Light.otf
           weight: 300
 
