--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   flutter_svg:
+  flutter_bloc:
+  hydrated_bloc:
+  path_provider:
 
 dev_dependencies:
   flutter_test:
