feat: implement some of signin logic and firebase

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_bloc:
   hydrated_bloc:
   path_provider:
+  firebase_core:
+  firebase_auth:
 
 dev_dependencies:
   flutter_test:
