feat: add adaptive icon for android and web

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,21 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_launcher_icons:
   flutter_lints: ^4.0.0
+
+flutter_launcher_icons:
+  android: "ic_launcher"
+  ios: false
+  image_path: "assets/images/spotify_app_logo.png"
+  adaptive_icon_background: "#000000"
+  adaptive_icon_foreground: "assets/images/spotify_app_logo.png"
+  adaptive_icon_foreground_inset: 25
+  web:
+    generate: true
+    image_path: "assets/images/spotify_app_logo.png"
+    background_color: "#000000"
+    theme_color: "#000000"
 
 flutter:
   uses-material-design: true
